add logo, icon, normalized sprites, prepare for server deployment